// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`execute trueusd endpoint should return error when ripcord true 1`] = `
{
  "errorMessage": "Ripcord indicator true. Details: Integrations, Balances",
  "statusCode": 502,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
  },
}
`;

exports[`execute trueusd endpoint should return success 1`] = `
{
  "data": {
    "result": 3117410009.89,
  },
  "result": 3117410009.89,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
  },
}
`;

exports[`execute trueusd endpoint should return success when given a chain 1`] = `
{
  "data": {
    "result": 24268.83,
  },
  "result": 24268.83,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
  },
}
`;
